Seed Distance Data

--- a/ConversionsApi/appsettings.json
+++ b/ConversionsApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conversions":  "Server=GAMING_MACHINE\\SQLEXPRESS; Database=Conversions; Trusted_Connection=True"
+  }
 }
