--- a/ConversionsDal/ConversionsDal.csproj
+++ b/ConversionsDal/ConversionsDal.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConversionsDb\ConversionsDb.csproj" />
+  </ItemGroup>
+
 </Project>
