--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,14 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  buildConfiguration: 'Release'
+  BuildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet build --configuration $(BuildConfiguration)
+  displayName: 'Build solution'
+# TODO: Run DB migrations
+- script: dotnet publish ConversionsApi/ConversionsApi.csproj --configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)
+  displayName: 'Publish API'
+- task: PublishBuildArtifacts@1
+  inputs:
+    artifactName: 'ConversionsServer'
