Add lists schema and get list by id endpoint

--- a/ConversionsApi/appsettings.Development.json
+++ b/ConversionsApi/appsettings.Development.json
@@ -4,6 +4,10 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "Conversions": "Server=GAMING_MACHINE\\SQLEXPRESS; Database=Conversions; Trusted_Connection=True"
     }
   }
 }
