--- a/ConversionsDal/ConversionsDal.csproj
+++ b/ConversionsDal/ConversionsDal.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>Chimerical.Conversions.Dal</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
