--- a/ConversionsDb/ConversionsDb.csproj
+++ b/ConversionsDb/ConversionsDb.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <RootNamespace>Chimerical.Conversions.Db</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
