--- a/ConversionsApi/ConversionsApi.csproj
+++ b/ConversionsApi/ConversionsApi.csproj
@@ -12,11 +12,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Config" Version="4.5.11" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.0" />
     <PackageReference Include="SimpleInjector" Version="4.3.0" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.3.1" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.3.1" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="4.3.1" />
-    <PackageReference Include="System.Diagnostics.TraceSource" Version="4.3.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
 
@@ -24,6 +26,12 @@
     <ProjectReference Include="..\ConversionsClientModels\ConversionsClientModels.csproj" />
     <ProjectReference Include="..\ConversionsDal\ConversionsDal.csproj" />
     <ProjectReference Include="..\ConversionsDb\ConversionsDb.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="C:\Users\PC\.nuget\packages\nlog.config\4.5.11\contentFiles\any\any\NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
