--- a/ConversionsApi/ConversionsApi.csproj
+++ b/ConversionsApi/ConversionsApi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.3.1" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.3.1" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="4.3.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
 
